# SuperCyberAgents

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  bootstrap.py  cerebras_network_scan.json  conftest.py  entrypoint.sh  input.json  local_network_scan.json  pyproject.toml  supercyberagents.sh  tool_installer.sh
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  dependency_review.yaml  lint_format_check.yaml  linters.yaml  pytest.yaml  run_tests.yaml  security_scan.yaml  tests.yml
agents/: __init__.py  base.py  domain_analyzer_agent.py  example_agent.py  network_security_agent.py
agents/domain_whois_agent/: README.md  domain_whois_agent.py
agents/security_manager/: README.md  security_manager.py
agents/security_manager_agent/: README.md
api/: main.py
api/routers/: agents.py
cli/: main.py
config/: providers.yaml
config/agents/: domain_whois_agent.yaml  example_agent.yaml  security_manager.yaml
config/tools/: delegate_task_tool.yaml  ip_lookup_tool.yaml  template_tool.yaml  whois_lookup_tool.yaml
core/: initialization.py  llm_clients.py  utils.py
docs/: architecture.md  project_guidelines.md  usage.md
docs/examples/: exposure_agent_example.md
docs/tools/: nuclei_installation.md
helm/: Chart.yaml  values.yaml
helm/files/config/: .gitkeep
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
inputs/: manager_whois_Cerebras_input.json  whois_input.json
observability/: logging.py
providers/: llm.py
schemas/: __init__.py  agent_schemas.py  delegate_task_schemas.py  domain_analysis.py  domain_whois_schemas.py  registry.py  security_manager_schemas.py  shodan_schemas.py  subdomain_finder_schemas.py  template_tool_schemas.py  tool_schemas.py  virustotal_schemas.py  whois_lookup_schemas.py
tests/: conftest.py  test_agents.py  test_api.py  test_cli.py  test_core.py  test_domain_whois_agent.py  test_schemas.py  test_tools.py
tests/agents/: test_domain_analyzer_agent.py  test_domain_analyzer_logic.py  test_network_security_agent.py  test_network_security_logic.py
tests/core/: test_initialization.py
tests/observability/: test_logging.py
tests/tools/: test_domain_tools.py  test_network_tools.py
tools/: __init__.py  base.py  domain_tools.py  network_tools.py
tools/delegate_task_tool/: README.md  delegate_task_tool.py
tools/ip_lookup_tool/: README.md  ip_lookup_tool.py
tools/template_tool/: README.md  template_tool.py
tools/whois_lookup_tool/: README.md  whois_lookup_tool.py
